// SPDX-FileCopyrightText: 2023 Steffen Vogel <post@steffenvogel.de>
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

option go_package = "github.com/stv0g/vand/pkg/pb";

message ModemState {
	message WWAN {
		message Network {
			uint32 mcc = 1;
			uint32 mnc = 2;
			uint32 lac = 3;
			uint32 cid = 4;
			string country = 5;
		}

		message SignalStrength {
			int32 rssi = 1;
			int32 rscp = 2;
			int32 ecio = 3;
			int32 rsrp = 4;
			int32 rsrq = 5;
			int32 bars = 6;
			int32 sinr = 7;

			int32 quality = 9;

			int32 rx_level = 10;
			int32 tx_level = 11;
		}

		message Session {
			uint64 bytes_tx = 1;
			uint64 bytes_rx = 2;
			uint32 duration = 3;
			uint32 start = 4;
		}

		Network network = 1;

		string operator = 2;

		string connection_text = 3;

		string register_network = 4;

		bool roaming = 7;

		string ipv4 = 8;
		string ipv6 = 9;

		uint32 mtu = 10;
		
		uint32 radio_quality = 11;

		string imsi = 12;
		string imei = 13;
		string iccid = 14;

		uint32 band = 15;
		uint32 chan_id_dl = 16;
		uint32 chan_id_ul = 17;
		
		bool connected = 18;

		SignalStrength signal_strength = 19;
	}

	message Client {
		string ipv4 = 1;
		string mac = 2;
		string name = 3;
		string media = 4;
		string source = 5;
	}

	message Wifi {
		bool enabled = 1;

		string ssid = 2;

		uint32 client_count = 4;

		uint32 channel = 5;
	}

	message Battery {
		float temperature = 1;
		float voltage = 2;
		float soc = 3;
		bool charging = 4;
	}

	message SMS {
		uint32 total_count = 1;
		uint32 unread_count = 2;
	}

	WWAN wwan = 1;
	Wifi wifi = 2;
	Battery battery = 4;
	SMS sms = 9;

	string serial_number = 5;
	repeated Client clients = 7;
	float temperature = 8;}